src/styles/style.css
 @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap');

html, body {
        height: 100%;
        margin: 0;
}

body{
        background-image: url('/src/img/fundo.png');
        background-size: cover; 
        background-position: center;

        display: flex;
        justify-content: center;
        align-items: center; 
        margin: 0;
        padding: 0;     
}

.container{
        width: 100%;
        height: 100vh; 
        display: flex;
        justify-content: center;
        justify-items: center;
        align-items: center;
        background-image: url("/src/img/fundo.png");
        background-size: cover;
        background-repeat: no-repeat;
        background-position: center; 
    }

.content{
    
        position: relative;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: flex-start; 
        width: 500px;
        padding: 1.5rem 2rem;
        gap: 20px;
        background-color: #c7c4c4e0;
        border: solid white 5px;
        border-radius: 25px;
        height: fit-content;   
        overflow-y: auto;    
        box-sizing: border-box;
}

.campos{
        padding: 5px;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        width: 100%;
        gap: 12px;

    }

.campos a{
        color: #21516C;
    }

.campo{
        background-color: #D9D9D9;
        color: #7D7D7D;
        border: none;
        border-radius: 50px;
        width: 80%;
        padding: 18px 16px;
        text-align: start;
        font-size: 15px;
    
    }


.seta{
        position: absolute;
        top: 20px;
        left: 20px;
        width: 35px; 
        cursor: pointer;
}

.logo{
        margin-top: 10px; 
        display: flex;
        flex-direction: column; 
        align-items: center;
        justify-content: center;
        gap: 8px;
        filter: drop-shadow(1px 1px 7px #bca6a680);
}

.logo img{
        width: 120px;
}

.titulo{
        font-family: 'Playfair Display', serif;
        font-size: 52px;
        color: #21516C;
        letter-spacing: 6px;
        font-weight: 900;
        margin-bottom: 5px; 
        text-shadow: 1px 1px 7px #bca6a680;
}

.botao{
        margin-top: 10px;
        border: none;
        background-color: #21516C;
        color: white;
        width: 40%;
        padding: 12px;
        border-radius: 10px;
        font-family: 'Playfair Display', serif;
        font-size: 1.2rem;
}
  
.mensagem{
        color: #000000;
        font-family: Arial, Helvetica, sans-serif;

}

.mensagem a{
        text-decoration: underline;
        color: #123448;
        font-weight: 600;
}

.aviso{
        color: #123448;
        font-weight: 900;
        margin-bottom: 0;
        font-family: Arial, Helvetica, sans-serif;
}

